--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ Flask-Breadcrumbs==0.5.1
 Flask-Mail==0.9.1
 Flask-Menu==0.7.2
 Flask-PyMongo==2.3.0
+Flask-ReCaptcha==0.4.2
+Flask-WTF==0.14.3
 html5lib-truncation==0.1.0
 itsdangerous==1.1.0
 six==1.14.0
 Werkzeug==1.0.1
+WTForms==2.3.3
